# docs/swagger.json
@@ -36,10 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.BlogDTO"
-                            }
+                            "$ref": "#/definitions/dto.PaginationBlogDTO"
                         }
                     }
                 }
@@ -87,16 +84,25 @@
                         "description": "Tags (OR match)",
                         "name": "tags",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Blog ID",
+                        "name": "blog_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Blog name",
+                        "name": "blog_name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.PostDTO"
-                            }
+                            "$ref": "#/definitions/dto.PaginationPostDTO"
                         }
                     }
                 }
@@ -144,6 +150,46 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.PaginationBlogDTO": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.BlogDTO"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.PaginationPostDTO": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.PostDTO"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
